
SWITCHwayf Version History
--------------------------
* Version 1.19 - Release date: ??? 2013
  - Added search-as-you-type support to Embedded WAYF. This feature is off by
    default as it is currently experimental. Can be activated with:  
    var wayf_use_improved_drop_down_list = true
  - Added MDUI logo support. Only favicon logos (16x16 px) will be used.
  - Various Javascript improvements to offload computation from WAYF to client
  - Replaced the term 'Home Organisation' in the language strings to more
    generic terms that probably are better understood by users.
  - SP names from MDUI metadata elements are now used if available
  - Added new version of JQuery library
  - Some small styling changes/CSS improvements
  
  Issues: <https://forge.switch.ch/redmine/projects/wayf/versions/???>
  Please read the specific update instructions in the README file.
  
* Version 1.18 - Release date:  5. August 2013
  - Changed default SessionInitiator of the Embedded WAYF to 
    /Login because this has been the default SessionInitiator in 
    Shibboleth for quite some time now.
  - Corrected viewport meta tag separator of default header as suggested
    by Andrew Sokolov from Saint Petersburg State University 
  - Fixed a bug in the IdP preselection of the embedded wayf when
    additional IdPs where added
  - Removed as many SWITCH-specific graphics and texts as possible.
  - Introduced configuration options to allow easier customization.
  - Fixed a few small bugs
  - Added some optimizations to the drop-down list search-as-you type 
    feature
  - The log file now logs - if possible - also the SP entityID/providerId
  - Some small styling changes/CSS improvements
  - Added Japanese locales from the GakuNin version of the WAYF
  
  Issues: <https://forge.switch.ch/redmine/projects/wayf/versions/62>
  Please read the specific update instructions in the README file, as some
  new configuration options were introduced that should be revised.
